[project]
name = "trading-webhooks-bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "fastapi>=0.111.0",
    "pytz>=2024.1",
    "MetaTrader5>=5.0.4288",
    "mt5linux>=0.1.9",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
