[project]
name = "trading_webhooks_bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hxse", email = "qmlibulqxk@gmail.ccom"},
]
dependencies = [
    "pandas>=2.0.3",
    "fastapi>=0.111.0",
    "rpyc==5.2.3",
    "loguru>=0.7.2",
    "requests>=2.31.0",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
